Zorb.Compiler.Tests/fixtures/invalid_struct_explicit_layout/main.zorb
[layout(explicit)]
struct BadHeader {
    [offset(0)] signature: u32,
    revision: u8
}

fn main() -> i64 {
    return 0
}
